src/snapshots/pandalang__parser__tests__parses@add.panda.snap
---
source: src/parser.rs
expression: source
input_file: src/snapshot_inputs/app/add.panda
---
Expr(
    App {
        fun: Expr(
            App {
                fun: Expr(
                    Fun {
                        arg: "x",
                        body: Expr(
                            Fun {
                                arg: "y",
                                body: Expr(
                                    BinOp {
                                        left: Expr(
                                            Var {
                                                name: "x",
                                            },
                                        ),
                                        right: Expr(
                                            Var {
                                                name: "y",
                                            },
                                        ),
                                        kind: Add,
                                    },
                                ),
                            },
                        ),
                    },
                ),
                arg: Expr(
                    Int {
                        n: 2,
                    },
                ),
            },
        ),
        arg: Expr(
            Int {
                n: 3,
            },
        ),
    },
)
