src/snapshots/pandalang__parser__tests__parses@add_one.panda.snap
---
source: src/parser.rs
expression: source
input_file: src/snapshot_inputs/app/add_one.panda
---
Expr(
    App {
        fun: Expr(
            Fun {
                arg: "x",
                body: Expr(
                    BinOp {
                        left: Expr(
                            Var {
                                name: "x",
                            },
                        ),
                        right: Expr(
                            Int {
                                n: 1,
                            },
                        ),
                        kind: Add,
                    },
                ),
            },
        ),
        arg: Expr(
            Int {
                n: 3,
            },
        ),
    },
)
