src/snapshots/pandalang__parser__tests__parses@add_var.panda.snap
---
source: src/parser.rs
expression: source
input_file: src/snapshot_inputs/bin_op/add_var.panda
---
BinOp(
    BinOp {
        left: Var(
            Var {
                name: "a",
            },
        ),
        right: Var(
            Var {
                name: "b",
            },
        ),
        kind: Add,
    },
)
