src/snapshots/pandalang__parser__tests__parses@double_digit.panda.snap
---
source: src/parser.rs
expression: source
input_file: src/snapshot_inputs/int/double_digit.panda
---
Expr(
    Int {
        n: 10,
    },
)
