src/snapshots/pandalang__parser__tests__parses@id.panda-2.snap
---
source: src/parser.rs
expression: source
input_file: src/snapshot_inputs/fun/id.panda
---
Expr(
    Fun {
        arg: "x",
        body: Expr(
            Var {
                name: "x",
            },
        ),
    },
)
