src/snapshots/pandalang__parser__tests__parses@id.panda.snap
---
source: src/parser.rs
expression: source
input_file: src/snapshot_inputs/app/id.panda
---
Expr(
    App {
        fun: Expr(
            Fun {
                arg: "x",
                body: Expr(
                    Var {
                        name: "x",
                    },
                ),
            },
        ),
        arg: Expr(
            Int {
                n: 3,
            },
        ),
    },
)
